Criação de validador de senha e AplicacaoUserManager::Criar

--- a/src/ByteBank.Forum/ByteBank.Forum.csproj
+++ b/src/ByteBank.Forum/ByteBank.Forum.csproj
@@ -172,8 +172,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AplicacaoUserManager.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\Identity\ValidadorSenha.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ContaController.cs" />
