Criação e configuração do EmailServico

--- a/src/ByteBank.Forum/Web.config
+++ b/src/ByteBank.Forum/Web.config
@@ -14,6 +14,9 @@
   </connectionStrings>
 
   <appSettings>
+    <add key="emailService:usuario" value="bytebank.forum@gmail.com" />
+    <add key="emailService:senha" value="ByteBankForu" />
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
