--- a/src/ByteBank.Forum/ByteBank.Forum.csproj
+++ b/src/ByteBank.Forum/ByteBank.Forum.csproj
@@ -175,6 +175,7 @@
     <Compile Include="App_Start\AplicacaoUserManager.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\Identity\EmailServico.cs" />
     <Compile Include="App_Start\Identity\ValidadorSenha.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
