--- a/src/ByteBank.Forum/ByteBank.Forum.csproj
+++ b/src/ByteBank.Forum/ByteBank.Forum.csproj
@@ -180,6 +180,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ContaController.cs" />
+    <Compile Include="Controllers\TopicoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -187,7 +188,9 @@
     <Compile Include="Models\UsuarioAplicacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ContaLoginViewModelo.cs" />
     <Compile Include="ViewModels\ContaRegistrarViewModel.cs" />
+    <Compile Include="ViewModels\TopicoCriarViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -229,6 +232,8 @@
     <Content Include="Views\Conta\Registrar.cshtml" />
     <Content Include="Views\Conta\AguardandoConfirmacao.cshtml" />
     <Content Include="Views\Conta\EmailConfirmado.cshtml" />
+    <Content Include="Views\Topico\Criar.cshtml" />
+    <Content Include="Views\Conta\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
